fixed an issue in which theres white space on right due to grid system

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,10 @@
     
 }
 
+.row {
+  margin:0px;
+}
+
 .footer{
     background-color:#314a89;
     position: relative;
